inspect/bug: realign panel and sidebar bottom edges again.

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1632,7 +1632,7 @@ $pin-chrome-outer-width: (2 * $pin-chrome-padding) + $pin-chrome-width
     font-size: 1.3em
     font-weight: bold
     padding: 0.5em
-      bottom: 0.6em
+      bottom: 0.57em // TODO: oh it hurts
 
     .janus-inspect-pin
       @include no-appearance
